ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CPI_Index__mdt/CPI_Index__mdt.object-meta.xml
<CustomObject>
    <description>CPI Index amounts, to apply between a Claim Year and the Year Applied</description>
    <label>CPI Index</label>
    <pluralLabel>CPI Indexes</pluralLabel>
</CustomObject>