ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CPI_Index__mdt/fields/Claim_Year__c.field-meta.xml
<CustomField>
    <fullName>Claim_Year__c</fullName>
    <description>Year of the Claim</description>
    <label>Claim Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>