ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CPI_Index__mdt/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <description>Factor used to apply on the value based on the Claim Year and Applied Year</description>
    <label>Factor</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>