ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/CPI_Index__mdt/fields/Year_Applied__c.field-meta.xml
<CustomField>
    <fullName>Year_Applied__c</fullName>
    <description>Year that the Claim is applied to (e.g. installation year)</description>
    <label>Year Applied</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>